# HireLoop

./: LOG_CHANGES.md  PROGRESS.md  README.md  package-lock.json  package.json
MCP_AGENTS/: .gitignore  Linked_In.md  README.md  config.py  linkedin_main.py  linkedin_orchestrator.py  main.py  orchestrator.py  requirements.txt  unified_main.py
backend/: .gitignore  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0b0193337f3c_add_domain_knowledge_base.py  1eb1f3f83877_update_interview_session_statuses.py  6bd9c8db652f_add_interviewroommemory_with_pgvector.py  8769bb49450c_add_new_notification_types.py  c56dacc53f33_sync_models_with_db.py  d4e1dfd55cc5_fix_embeddings_type.py  e28a369c17f3_update_interview_models.py  e5060454a294_add_shortlisted_to_application_status.py  f9e1dfd55cc4_baseline_existing_schema.py
backend/core/: cloudinary.py  config.py  db.py  embeddings.py  pdf_extractor.py  sarvam.py  scheduler.py
backend/middleware/: auth.py  ownership.py
backend/mock_interview_test/: mock_data.py  router.py  test_graph.py
backend/models/: application.py  candidate.py  company.py  interview.py  job.py  notification.py  rag.py  report.py  user.py
backend/pipeline/: interview_graph.py  ranking.py  recruitment_graph.py  runner.py
backend/pipeline/agents/: fit_scorer.py  interview_conductor.py  mcp_bridge.py  report_genertor.py  resume_parser.py
backend/pipeline/nodes/: interview_nodes.py  recruitment_nodes.py
backend/routers/: applications.py  auth.py  candidates.py  companies.py  interviews.py  jobs.py  notifications.py  reports.py
backend/schemas/: application.py  candidate.py  company.py  job.py  report.py  user.py
backend/scratch/: find_resume_url.py  test_mcp_bridge.py
backend/scripts/: seed_rag_knowledge.py
backend/services/: application_service.py  auth_service.py  candidate_service.py  company_service.py  job_service.py  report_service.py
backend/src/: config.py  db.py  main.py  models.py
backend/src/api/auth/: dependencies.py  router.py  schemas.py  utils.py
backend/test_transcripts/: transcript_e2ca7f8a-fb6b-4369-8adb-27750d7dc43c.json
backend/tests/: check_pipeline_readiness.py  reset_job.py  test_embeddings.py  test_interview.py  test_pdf_extractor.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
(+54 files in other folders)
