[project]
name = "HireLoop-backend"
version = "0.1.0"
description = "Backend of HireLoop web application"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.3.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.136.0",
    "greenlet>=3.4.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.38",
]
