[project]
name = "HireLoop-backend"
version = "0.1.0"
description = "Backend of HireLoop web application"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "cloudinary>=1.44.2",
    "docling>=2.92.0",
    "exa-py>=1.5.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.136.0",
    "google-generativeai>=0.8.6",
    "greenlet>=3.4.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.11.0",
    "json-repair>=0.59.5",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.8",
    "mcp>=1.27.0",
    "openai>=2.33.0",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.2",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.14.0",
    "pypdf>=6.10.2",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "requests>=2.30.0",
    "sarvamai>=0.1.28",
    "sqlmodel>=0.0.38",
]
